# HaskellJavaPerspektive

./: README.md
Codeschnippsel/: Codeschnippsel.cabal
Codeschnippsel/src/: AlgebraischeDatentypen.hs  InfiniteStuff.hs  Main.hs
